# sv-comp

./: .gitignore  README.md  cleanup_chroma.sh  eval_strategies.sh  eval_strategies_codet5p.sh  eval_strategies_gemini.sh  eval_strategies_nvembed.sh  eval_strategies_qwen.sh  manage.py  pyproject.toml  requirements.txt  setup_sv_comp.sh  train_verifier_predict.py  train_verifier_predict.sh
benchmarks/: apps.py  models.py
benchmarks/migrations/: 0001_initial.py  0002_alter_benchmark_options_and_more.py  0003_alter_benchmark_cpu_alter_benchmark_memory_and_more.py  0004_benchmark_is_correct.py  0005_remove_benchmark_verification_specs.py  0006_benchmark_status_display.py  0007_alter_benchmark_options_and_more.py  0008_delete_verificationspecification.py  0009_alter_benchmark_raw_score.py
sv_comp/: asgi.py  settings.py  urls.py  wsgi.py
utils/: reader.py  sv_comp_scraper.py
verification_tasks/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
verification_tasks/embedding/: config.py  embed.py  embedder.py  embedderv2.py  helpers.py  query.py
verification_tasks/migrations/: 0001_initial.py  0002_verificationtask_expected_result.py  0003_alter_verificationtask_expected_result.py  0004_alter_verificationtask_expected_result.py  0005_alter_verificationtask_expected_result.py  0006_alter_verificationtask_options.py  0007_verificationsubcategory.py  0008_verificationset.py  0009_verificationtask_subcategories.py
verification_tasks/templates/: base.html
verifiers/: apps.py  models.py  urls.py  views.py
verifiers/migrations/: 0001_initial.py  (+1 more)
(+39 files in other folders)
