[project]
name = "sv-comp-analysis"
version = "0.1.0"
description = "A short description of my project"
authors = [{ name = "Patrik Felbinger", email = "patrik.felbinger@web.de" }]
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "einops>=0.8.1",
    "google-genai>=1.18.0",
    "pydantic>=2.11.5",
    "selenium>=4.33.0",
    "torch>=2.7.0",
]
